# cse-dashboard

./: Dockerfile  Makefile  README.md  handler.py  pyproject.toml  run_dash.py
assets/: theme.css
dashboard/: dash_app.py
data/: dpl_quarterlies.parquet  rpe_quarterlies.parquet
